--- a/laba1/laba1/laba1.vcxproj
+++ b/laba1/laba1/laba1.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{7C11F3AA-C6F3-495C-9480-01F03C51B0D6}</ProjectGuid>
+    <ProjectGuid>{B3B5F9CF-60A9-42B2-B771-C08EFE53051D}</ProjectGuid>
     <RootNamespace>laba1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -115,12 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="A-level.h" />
-    <ClInclude Include="B-level.h" />
+    <ClInclude Include="C-level.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="A-level.cpp" />
-    <ClCompile Include="B-level.cpp" />
+    <ClCompile Include="C-level.cpp" />
     <ClCompile Include="laba1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
